fix spacing user profile

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -31,6 +31,11 @@
     height: 260px;
     position: relative;
     justify-content: space-between;
+    margin-bottom: 136px;
+}
+
+.current-user-cover {
+    margin-bottom: 0;
 }
 
 .profile-songs {
